--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,21 @@
-/* body {
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+table, th, td {
+  border: 1px solid;
+  border-collapse: collapse;
+  margin: 25px;
+}
+
+th, td {
+  width: 150px;
   text-align: center;
-
-} */
-
-label {
-  display: inline-block;
-  /* clear: left; */
-  width: 120px;
-  /* text-align: right; */
+  padding: 10px;
 }
 
-input {
-  display: inline-block;
-  margin: 5px;
-}
-
-p {
-  padding: 0;
-  margin: 0;
-  display: inline-block;
+.total {
+  margin: 25px;
+  text-align: center;
 }
