--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,45 @@
-.center {
-  margin-left: auto;
-  margin-right: auto;
-}
-
-table, th, td {
-  border: 1px solid;
-  border-collapse: collapse;
-  margin: 25px;
-}
-
-th, td {
-  width: 150px;
-  text-align: center;
-  padding: 10px;
+* {
+  font-size: 0.95em;
+  font-family: sans-serif;
 }
 
 .total {
   margin: 25px;
+  text-align: center;
+} 
+
+.styled-table {
+  border-collapse: collape;
+  margin: 25px 0;
+  min-width: 400px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.styled-table thead tr {
+  background-color: #009879;
+  color: #ffffff;
+  text-align: center;
+}
+
+.styled-table th,
+.styled-table td {
+  padding: 12px 15px;
+}
+
+.styled-table tbody tr {
+  border-bottom: 1px solid #dddddd;
+}
+
+.styled-table tbody tr:nth-of-type(even ){
+  background-color: #f3f3f3;
+}
+
+.styled-table tbody tr:last-of-type {
+  border-bottom: 2px solid #009879;
+}
+
+p {
   text-align: center;
 }
